# Mandala-Rendering-System-MRS-

./: .dockerignore  .env.example  .gitignore  .zenodo.json  AGENTS.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  Dockerfile.4drs  README.md  docker-compose.yml  index.html  opencode.json  package-lock.json  package.json  render.yaml
.github/: CODEOWNERS
.github/workflows/: ci.yml  fourdadapter-unreal.yml  pages.yml
.opencode/agents/: governed.md  reviewer.md
4d-renderer/: COMPAT.md  ExportManager.js  README.md  index.js  inspector.js  live-link.js  math.js  package.json  render-canvas.js  rt4d-accel.js  rt4d-geometry.js  rt4d-integrator.js  rt4d-material.js  rt4d-math.js  rt4d-output.js  rt4d-scene.js  rt4d.js  surfaces.js
4d-renderer/scenes/: hypertorus-sphere.json
4d-renderer/src/: cli.js  index.js
ci/unreal/: fourdadapter.yml.example
config/: b2.example.json
constitution/: CHARTER.md  CRA_CSSV.md  CSSV.md
css/: cinematic.css
cssv/: artifacts.json  server.js
cssv/public/: dashboard.js  index.html
demo/scenes/: 4d_cinematic_demo.md
demo/timelines/: mythar_ascension.timeline.json
demo/worlds/: mythar_plains.world.json
docs/: START_HERE_MRS_30_MIN.md
docs/4drs/: ARCHITECTURE.md  First-4D-Renderer.md  NAMING.md  README.md  RELEASE_NOTES_v1.0.md  SPEC-v1.0.md
docs/ops/: BACKBLAZE_B2_S3.md  DEVPOST_GENBLAZE.md  PLATFORM_PERF_ROADMAP.md
docs/scorecards/: 4d-engine-v1.md  fourd-renderer-v2.md  rt4d.md
engine/conformance/: BrowserRuntimeAdapter.js  ConformanceChecker.cpp  ConformanceChecker.cs  ConformanceChecker.h  ConformanceChecker.js  conformance-profile.schema.json  default.conformance-profile.json
engine/constitution/: charter.js  contracts.js
engine/cssv/: CssvLedger.cs  CssvLedger.h  CssvRegistry.js  cqlInterpreter.js  cqlParser.js  ledger.js
engine/dto/: GovernedTimelineDto.cs  GovernedTimelineDto.h  GovernedWorldDto.cs  GovernedWorldDto.h
engine/governance/: CKL.h  CKLEvaluator.cs  ConstitutionalKnowledgeLayer.cs  DecisionEngine.cs  (+6 more)
examples/: README.md  web-demo.html
js/: app.js  export.js  math4d.js  renderer.js
mrs/: .env.example  .gitignore  .npmrc  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
mrs/apps/genblaze-media/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml  requirements-docker.txt  requirements.txt
mrs/apps/genblaze-media/app/: __init__.py  config.py  embeddings.py  index_store.py  main.py  nvidia_http.py  pipeline.py
mrs/apps/genblaze-media/app/static/: index.html
mrs/apps/genblaze-media/scripts/: flux-smoke.mjs  flux_smoke.py
mrs/apps/genblaze-media/tests/: test_api.py
native-preview/: CMakeLists.txt
native-preview/include/: SharedGPUImage.h
native-preview/src/: CrossProcessSync.cpp  PreviewWindow.cpp  VulkanProducer.cpp
schemas/: EvidenceRecord.schema.json  IntentRecord.schema.json  Timeline.schema.json  World.schema.json
scripts/: build-unreal.ps1  export-surface-meshes.mjs  init-cssv-ledger.mjs  inspector-ws-server.mjs  link-mrs-shim.mjs  render-hyper-caustic-baseline.mjs  replay-validator-outline.mjs  serve-static.mjs  setup-unreal.ps1  start-dev.mjs  test-4d-renderer.mjs  test-all.mjs  test-ascension-ckl.mjs  test-bvh4d-gpu.mjs  test-conformance.mjs  test-cql.mjs  test-examples-smoke.mjs  test-host-solid-play.mjs  test-inspector4d.mjs  test-visual-regression.mjs  validate-world-document.mjs  verify-host-probes.mjs  verify-movie-pipelines.mjs
unity/: README.md
(+482 files in other folders)
