[project]
name = "mrs-genblaze-media"
version = "0.1.0"
description = "Thin FastAPI + Genblaze + Backblaze B2 concept-media MVP for Mandala Rendering System"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.116.1",
  "uvicorn[standard]==0.35.0",
  "python-dotenv==1.1.1",
  "pydantic==2.11.7",
  "httpx==0.28.1",
  "genblaze-core==0.3.7",
  "genblaze-s3==0.3.6",
  "genblaze-nvidia==0.3.2",
  "boto3==1.39.14",
]

[project.optional-dependencies]
dev = ["pytest==8.4.1"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
